--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-{% load cms_tags sekizai_tags  menu_tags %}
+{% load cms_tags sekizai_tags menu_tags %}
 
 <!doctype html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
@@ -18,9 +18,19 @@
   <!--[if lt IE 7]>
     <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
   <![endif]-->
-{% show_menu %}
+
 {% cms_toolbar %}
-{% placeholder "main" %}
+
+{% language_chooser %}
+
+{% show_menu %}
+
+{% placeholder "header" %}
+
+{% placeholder "news" %} 
+
+{% placeholder "footer" %}
+
 {% render_block "js" %}
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <script>
