Link boiler plate files in home template

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,10 @@
   {% render_block "css" %}
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
+
+  <link rel="stylesheet" href="{{ STATIC_URL }}css/normalize.css">
+  <link rel="stylesheet" href="{{ STATIC_URL }}css/main.css">
+  <script src="{{ STATIC_URL }}js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 
 <body>
