Creating html structure

--- a/templates/home.html
+++ b/templates/home.html
@@ -26,15 +26,25 @@
 {% cms_toolbar %}
 
 {% language_chooser %}
-
+  <div id="top">
+    <div id="random_image">
+    </div>
+    <div id="dynamic_menu">
 {% show_menu %}
-
+    </div>
 {% placeholder "header" %}
-
+  <div id="center">
+    <div id="left">
+    </div>
+    <div id="medium">
 {% placeholder "news" %} 
-
+    </div>
+    <div id="right">
+    </div>
+  </div>
+  <div id="footer">
 {% placeholder "footer" %}
-
+  </div>
 {% render_block "js" %}
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <script>
