Creating html structure

--- a/templates/home.html
+++ b/templates/home.html
@@ -28,12 +28,13 @@
 <div id="content">
     {% language_chooser %}
     <div id="top">
-      <div id="random_image">
-        {% placeholder "header" %}
+      <div id="header_image">
+        {% placeholder "header_image" %}
       </div>
       <div id="dynamic_menu">
         {% show_menu %}
       </div>
+    </div>
     <div id="center">
       <div id="left">
       </div>
