Renaming divs related to content instead of place

--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
 
 {% cms_toolbar %}
 
-<div id="content">
+<div id="wrapper">
     {% language_chooser %}
     <div id="top">
       <div id="header_image">
@@ -35,13 +35,13 @@
         {% show_menu %}
       </div>
     </div>
-    <div id="center">
-      <div id="left">
+    <div id="content">
+      <div id="banner">
       </div>
-      <div id="medium">
+      <div id="news">
         {% placeholder "news" %} 
       </div>
-      <div id="right">
+      <div id="events">
       </div>
     </div>
     <div id="footer">
