Add language choose to page template

--- a/templates/page.html
+++ b/templates/page.html
@@ -3,6 +3,7 @@
 
 {% block base_content %}
     <div id="page_header">
+      {% language_chooser %}
       {% placeholder "header_image" %}
     </div>
     <div id="breacrumbs">
