--- a/templates/base.html
+++ b/templates/base.html
@@ -9,12 +9,16 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>{{ request.current_page.get_title }}</title>
-  {% render_block "css" %}
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
 
-  <link rel="stylesheet" href="{{ STATIC_URL }}css/normalize.css">
-  <link rel="stylesheet" href="{{ STATIC_URL }}css/main.css">
+  {% render_block "css" %}
+
+  {% addtoblock "css" %}
+   <link rel="stylesheet" href="{{ STATIC_URL }}css/normalize.css">
+   <link rel="stylesheet" href="{{ STATIC_URL }}css/main.css">
+   <link rel="stylesheet" href="{{ STATIC_URL }}css/base.css">
+  {% endaddtoblock %}
   <script src="{{ STATIC_URL }}js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 
