Added addblock to load specific page css

--- a/templates/page.html
+++ b/templates/page.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
-{% load cms_tags menu_tags %}
+{% load cms_tags menu_tags sekizai_tags %}
 
 {% block base_content %}
+    {% addtoblock "css" %}
+      <link rel="stylesheet" href="{{ STATIC_URL }}css/page.css">
+    {% endaddtoblock %}
     <div id="page_header">
       {% language_chooser %}
       {% placeholder "header_image" %}
