Added div and place holder for project description

--- a/templates/home.html
+++ b/templates/home.html
@@ -20,6 +20,9 @@
     <div id="content">
       <div id="banner">
       </div>
+      <div id="project_description">
+        {% placeholder "project_description" %}
+      </div>
       <div id="news">
         {% placeholder "news" %} 
       </div>
