Events div renamed to tools and added new div for sights link after content div

--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,10 @@
       <div id="news">
         {% placeholder "news" %} 
       </div>
-      <div id="events">
+      <div id="tools">
       </div>
+    </div>
+    <div id="sight_link">
+      {% placeholder "sight_link" %}
     </div>
 {% endblock %}
