Fixed new div name

--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
       <div id="tools">
       </div>
     </div>
-    <div id="sight_link">
-      {% placeholder "sight_link" %}
+    <div id="sights_link">
+      {% placeholder "sights_link" %}
     </div>
 {% endblock %}
