--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,10 @@
    <link rel="stylesheet" href="{{ STATIC_URL }}css/base.css">
   {% endaddtoblock %}
   <script src="{{ STATIC_URL }}js/vendor/modernizr-2.6.2.min.js"></script>
+  {% addtoblock "js" %}
+  <script src="{{ STATIC_URL }}js/vendor/jquery-1.9.0.min.js"></script>
+  <script src="{{ STATIC_URL }}js/main.js"></script>
+  {% endaddtoblock %}
 </head>
 
 <body>
