Footer placeholder replaced by static imgs to avoid adding logos on each page

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,8 @@
 <div id="wrapper">
   {% block base_content %}{% endblock %}
   <div id="footer">
-    {% placeholder "footer" %}
+    <img src="{{ STATIC_URL }}img/Life-logo.png"/>
+    <img src="{{ STATIC_URL }}img/Natura2000-logo.png"/>
   </div>
 </div>
 {% render_block "js" %}
