--- a/templates/base.html
+++ b/templates/base.html
@@ -18,12 +18,15 @@
    <link rel="stylesheet" href="{{ STATIC_URL }}css/normalize.css">
    <link rel="stylesheet" href="{{ STATIC_URL }}css/main.css">
    <link rel="stylesheet" href="{{ STATIC_URL }}css/base.css">
+   <link rel="stylesheet" href="{{ STATIC_URL }}js/vendor/prettyphoto/css/prettyPhoto.css">
   {% endaddtoblock %}
   <script src="{{ STATIC_URL }}js/vendor/modernizr-2.6.2.min.js"></script>
   {% addtoblock "js" %}
   <script src="{{ STATIC_URL }}js/vendor/jquery-1.9.0.min.js"></script>
+  <script src="{{ STATIC_URL }}js/vendor/prettyphoto/js/jquery.prettyPhoto.js"></script>
   <script src="{{ STATIC_URL }}js/main.js"></script>
   {% endaddtoblock %}
+  {% render_block "js" %}
 </head>
 
 <body>
@@ -39,7 +42,6 @@
     <img src="{{ STATIC_URL }}img/Natura2000-logo.png"/>
   </div>
 </div>
-{% render_block "js" %}
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
 var _gaq=[['_setAccount','UA-39109692-1'],['_trackPageview']];
