Placing divs and overlaping menu over header image

--- a/templates/home.html
+++ b/templates/home.html
@@ -20,11 +20,13 @@
     <div id="content">
       <div id="banner">
       </div>
-      <div id="project_description">
-        {% placeholder "project_description" %}
-      </div>
-      <div id="news">
-        {% placeholder "news" %} 
+      <div id="project_description_news">
+        <div id="project_description">
+          {% placeholder "project_description" %}
+        </div>
+        <div id="news">
+          {% placeholder "news" %} 
+        </div>
       </div>
       <div id="tools">
       </div>
