--- a/static/css/home.css
+++ b/static/css/home.css
@@ -11,6 +11,25 @@
     float: right;
 }
 
+    #dynamic_menu ul { 
+        list-style: none;
+        font-size: small;
+    }
+
+        #dynamic_menu ul li { 
+           text-align: right;
+           padding-top: 1ex;
+           padding-bottom: 1ex;
+           padding-left: 1ex;
+           padding-right: 6ex;
+           border-bottom: 1px gray solid;
+        }
+
+        #dynamic_menu ul li.selected a { 
+           background: url('img/medusa-peine.png') no-repeat left;
+        }
+
+
 #content {
   left: 0;
   clear: both;
@@ -23,3 +42,4 @@
 #tools {
   float: right;
 }
+
