--- a/static/css/home.css
+++ b/static/css/home.css
@@ -3,6 +3,11 @@ body {
     font-size: normal;
 }
 
+h2 {
+    color: #39b54a;
+    font-size: 120%;
+}
+
 #header_image {
   position: absolute;
   z-index: -1;
@@ -27,7 +32,6 @@ body {
            padding-bottom: 1ex;
            padding-left: 1ex;
            padding-right: 6ex;
-           border-bottom: 1px gray solid;
            margin-right: 2ex;
         }
 
@@ -36,9 +40,17 @@ body {
            background-position: right;
         }
 
-        #dynamic_menu ul li.selected a { 
-
+        #dynamic_menu ul li a { 
+            color: #4dc5d9;
+            text-decoration: none;
+            font-size: 100%;
+            font-weight: bold;
         }
+
+        #dynamic_menu ul li a:visited { 
+            color: #4dc5d9;
+        }
+
 
 
 #content {
@@ -48,6 +60,11 @@ body {
 
 #project_description_news {
   float: left:
+}
+
+#sights_link  {
+    width: 676px;
+    margin: 0 auto; 
 }
 
 #tools {
