--- a/templates/home.html
+++ b/templates/home.html
@@ -17,8 +17,6 @@
       </div>
     </div>
     <div id="content">
-      <div id="banner">
-      </div>
       <div id="project_description_news">
         <div id="project_description">
           {% placeholder "project_description" %}
@@ -28,6 +26,8 @@
         </div>
       </div>
       <div id="tools">
+        <div id="search">
+        </div>
       </div>
     </div>
     <div id="sights_link">
