--- a/static/css/home.css
+++ b/static/css/home.css
@@ -73,8 +73,8 @@ h2 {
    width: 40%;
   }
      #search {
-         height: 12ex;
-         background-color: ;
+         height: 8ex;
+         background-color: #01bbd6;
      }
 
 
