--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
 
 {% cms_toolbar %}
 <div id="wrapper">
-  {% language_chooser %}
+  {% language_chooser "language_chooser.html" %}
   {% block base_content %}{% endblock %}
   <div id="footer">
     <img src="{{ STATIC_URL }}img/Life-logo.png"/>
