Adding divs for tools

--- a/templates/home.html
+++ b/templates/home.html
@@ -28,6 +28,18 @@
       <div id="tools">
         <div id="search">
         </div>
+        <div id="special_news">
+          <div id="special_news_text">
+            {% placeholder "special_news_text" %}
+          </div>
+          <div id="special_news_image">
+            {% placeholder "special_news_image" %}
+          </div>
+        </div>
+        <div id="picture_gallery">
+        </div>
+        <div id="contact">
+        </div>
       </div>
     </div>
     <div id="sights_link">
