--- a/static/css/base.css
+++ b/static/css/base.css
@@ -28,8 +28,8 @@ h2 {
     border-bottom: thin solid #3bb34a;
   }
 
-    #dynamic_menu ul li.selected {
-      background: url('../img/medusa-indicador.png') no-     repeat;
+    #dynamic_menu ul li:hover {
+      background: url('../img/medusa-indicador.png') no-repeat;
       background-position: right;
     }
 
