--- a/templates/cmsplugin_embeddedpages/layouts/groups/embedded_home_news.html
+++ b/templates/cmsplugin_embeddedpages/layouts/groups/embedded_home_news.html
@@ -3,4 +3,6 @@
       {% include plugin.instance.page_template %}
    {% endif %}
 {% endfor %}
-<a href="">More news</a>
+<div id="more_news">
+  <a href="">More news</a>
+</div>
