Moving project description to top

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,8 +8,13 @@
     {% endaddtoblock %}
 
     <div id="top">
-      <div id="header_image">
-        {% placeholder "header_image" %}
+      <div id="header_image_project_desciption">
+        <div id="header_image">
+          {% placeholder "header_image" %}
+        </div>
+        <div id="project_description">
+          {% placeholder "project_description" %}
+        </div>
       </div>
       <div id="dynamic_menu">
         <ul id="nav">
@@ -18,9 +23,6 @@
       </div>
     </div>
     <div id="content">
-      <div id="project_description">
-        {% placeholder "project_description" %}
-      </div>
       <div id="news_tools">
         <div id="news">
           {% placeholder "news" %} 
