--- a/static/css/home.css
+++ b/static/css/home.css
@@ -7,6 +7,16 @@
   height: 298px;
 }
 
+#header_image_project_description {
+  float: left;
+  width: 100%;
+}
+
+  #header_image {
+    height: 234px;
+    clear: both;
+  }
+
 #dynamic_menu {
   float: right;
 }
@@ -15,15 +25,6 @@
   width: 100%;
   height: 100%;
 }
-
-  #project_description {
-    color: #8b8b8b;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 2ex;
-    margin-top: 2ex;
-    border-bottom: thin solid #3bb34a;
-  }
 
   #news_tools {
     overflow: hidden;
