--- a/templates/home.html
+++ b/templates/home.html
@@ -24,9 +24,9 @@
       <div id="news_tools">
         <div id="news">
           {% placeholder "new-1" %}
-          <a href="">{% trans "Read more.." %}</a>
+          <a class="read_more" href="">{% trans "Read more.." %}</a>
           {% placeholder "new-2" %}
-          <a href="">{% trans "Read more.." %}</a>
+          <a class="read_more" href="">{% trans "Read more.." %}</a>
         </div>
         <div id="tools">
           <div id="search">
