--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,29 +1,29 @@
-#header_image {
-  position: absolute;
-  z-index: -1;
-}
-
 #top {
-  height: 298px;
-}
-
-#header_image_project_description {
-  float: left;
+  height: 304px;
   width: 100%;
 }
 
-  #header_image {
-    height: 234px;
-    clear: both;
+  #header_image_project_desciption {
+    float: left;
+    width: 718px;
   }
 
-#dynamic_menu {
-  float: right;
-}
+    #project_description {
+      color: #565555;
+      font-weight: bold;
+      text-align: left;
+      font-size: 84%;
+    }
+  
+  #dynamic_menu {
+    float: right;
+    width: 260px;
+  }
 
 #content {
   width: 100%;
   height: 100%;
+  clear: both;
 }
 
   #news_tools {
