Approach to new styles and plugins conf

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -43,10 +43,8 @@
       float: left;                      
   }
 
-   #news h2 { 
-      float: left;                      
-  }
-   #news p { 
+   #news .new_text { 
+      width: 80%;
       float: left;                      
   }
 
