--- a/templates/home.html
+++ b/templates/home.html
@@ -23,9 +23,15 @@
       </div>
       <div id="news_tools">
         <div id="news">
-          {% placeholder "new-1" %}
+          {% placeholder "new-image-1" %}
+          <div class="new_text">
+           {% placeholder "new-text-1" %}
+          </div>
           <a class="read_more" href="">{% trans "Read more.." %}</a>
-          {% placeholder "new-2" %}
+          {% placeholder "new-image-2" %}
+          <div class="new_text">
+           {% placeholder "new-text-2" %}
+          </div>
           <a class="read_more" href="">{% trans "Read more.." %}</a>
         </div>
         <div id="tools">
