--- a/templates/home.html
+++ b/templates/home.html
@@ -23,16 +23,20 @@
       </div>
       <div id="news_tools">
         <div id="news">
-          {% placeholder "new-image-1" %}
-          <div class="new_text">
-           {% placeholder "new-text-1" %}
+          <div class="new">
+            {% placeholder "new-image-1" %}
+            <div class="new_text">
+              {% placeholder "new-text-1" %}
+              <a class="read_more" href="">{% trans "Read more" %}</a>
+            </div>
           </div>
-          <a class="read_more" href="">{% trans "Read more.." %}</a>
-          {% placeholder "new-image-2" %}
-          <div class="new_text">
-           {% placeholder "new-text-2" %}
+          <div class="new">
+            {% placeholder "new-image-2" %}
+            <div class="new_text">
+             {% placeholder "new-text-2" %}
+              <a class="read_more" href="">{% trans "Read more" %}</a>
+            </div>
           </div>
-          <a class="read_more" href="">{% trans "Read more.." %}</a>
         </div>
         <div id="tools">
           <div id="search">
