--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,9 @@
   <div id="footer">
     <img src="{{ STATIC_URL }}img/Life-logo.png"/>
     <img src="{{ STATIC_URL }}img/Natura2000-logo.png"/>
+    <div id="disclaimer">
+      The Jellyrisk ENPI Project is an integrated monitoring of jellyfish outbreaks under anthropogenic and climatic impacts in the Mediterranean sea (coastal zones): trophic and socio-economic risks. It is funded by the - Copyright {% now "Y" %}
+    </div>
   </div>
 </div>
 {% render_block "js" %}
