Language chooser styles

--- a/templates/home.html
+++ b/templates/home.html
@@ -29,14 +29,14 @@
             {% placeholder "new-image-1" %}
             <div class="new_text">
               {% placeholder "new-text-1" %}
-              <a class="read_more" href="">{% trans "Read more" %}</a>
+              <a class="read_more" href="news/new-1">{% trans "Read more" %}</a>
             </div>
           </div>
           <div class="new">
             {% placeholder "new-image-2" %}
             <div class="new_text">
              {% placeholder "new-text-2" %}
-              <a class="read_more" href="">{% trans "Read more" %}</a>
+              <a class="read_more" href="news/new-2">{% trans "Read more" %}</a>
             </div>
           </div>
         </div>
