--- a/templates/language_chooser.html
+++ b/templates/language_chooser.html
@@ -1,4 +1,8 @@
 {% load menu_tags cms_tags i18n %}
-{% for language in languages %}
-<a href="{% page_language_url language.0 %}"{% ifequal lang language.0 %} class="current"{% endifequal %}><img src="{{ STATIC_URL }}img/{{ language.0 }}.png" /></a>
-{% endfor %}
+
+<div id="language_chooser">
+  {% for language in languages %}
+  <a href="{% page_language_url language.0 %}"{% ifequal lang language.0 %} class="current"{% endifequal %}>{{ language.1 }}</a>
+  {% if not forloop.last %} | {% endif %}
+  {% endfor %}
+</div>
