--- a/static/css/base.css
+++ b/static/css/base.css
@@ -33,20 +33,20 @@ h2 {
     }
 
   #dynamic_menu ul li a {
-    color: #4dc5d9;
+    color: #39b54a; 
     text-decoration: none;
     font-size: 100%;
     font-weight: bold;
   }
 
     #dynamic_menu ul li a:visited {
-      color: #4dc5d9;
+      color: #39b54a; 
     }
 
 
 #disclaimer{
+  font-size: 70%;
   margin-top: 5px;
-  font-size: smaller;
 }
 
 #language_chooser {
@@ -57,15 +57,13 @@ h2 {
    color: green;
    padding: .5ex;
    padding-right: 1ex;        
-   -moz-border-radius-topright: 4px;
+   padding-left: 1ex;
    -moz-border-radius-bottomleft: 4px;
-   border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
-   opacity:0.8;
-   filter:alpha(opacity=80); /* For IE8 and earlier */
+   opacity:0.9;
+   filter:alpha(opacity=90); /* For IE8 and earlier */
 }
 
 #language_chooser a { 
    color: #39b54a;
 }
->>>>>>> Language chooser styles
