--- a/static/css/home.css
+++ b/static/css/home.css
@@ -8,6 +8,11 @@ body {
      float: right; 
      width: 260px; 
      background-color: #DBF2F6;
+     padding-bottom: 4ex;
+     -moz-border-radius-bottomright: 4px;
+     border-bottom-right-radius: 4px;
+     -moz-border-radius-bottomleft: 4px;
+     border-bottom-left-radius: 4px;
 }
 
 #top {
@@ -93,13 +98,29 @@ body {
       height: 8ex;
     }
 
-    #special_news_image {
-      text-align: right;
-      margin-bottom: 2px;
+    #special_news { 
+      float: left;
+      margin-bottom: 2ex;
     }
+
+    #special_news_text {
+      float: left;
+      width: 142px;
+      padding-top: 4px;
+      padding-bottom: 4px;
+      padding-right: 5px;
+      padding-left: 5px;
+    }
+
+    #special_news_image {
+      float: right;
+    }
+
+    #special_news
 
     #picture_gallery {
       text-align: center;
+      clear: both;
     }
 
   #sights_link {
