--- a/static/css/home.css
+++ b/static/css/home.css
@@ -13,6 +13,10 @@ body {
      border-bottom-right-radius: 4px;
      -moz-border-radius-bottomleft: 4px;
      border-bottom-left-radius: 4px;
+     -moz-border-radius-topright: 4px;
+     border-top-right-radius: 4px;
+     -moz-border-radius-topleft: 4px;
+     border-top-left-radius: 4px;
 }
 
 #top {
@@ -94,10 +98,6 @@ body {
     border-radius: 20px;
   }
 
-    #search {
-      height: 8ex;
-    }
-
     #special_news { 
       float: left;
       margin-bottom: 2ex;
@@ -106,7 +106,6 @@ body {
     #special_news_text {
       float: left;
       width: 142px;
-      padding-top: 4px;
       padding-bottom: 4px;
       padding-right: 5px;
       padding-left: 5px;
