--- a/static/css/home.css
+++ b/static/css/home.css
@@ -6,9 +6,10 @@ body {
 
 #right { 
      float: right; 
-     width: 260px; 
+     width: 248px; 
      background-color: #DBF2F6;
-     padding-bottom: 4ex;
+     padding: 12px;
+     padding-top: .5ex;
      -moz-border-radius-bottomright: 4px;
      border-bottom-right-radius: 4px;
      -moz-border-radius-bottomleft: 4px;
@@ -36,9 +37,14 @@ body {
     }
   
     #dynamic_menu ul#nav {
-      margin-top: 5px;
+      margin: 0;
       padding-left: 5px;
     }
+
+.plugin_link a { 
+     display: block;
+     color: #39b54a;
+  }
 
 #content {
   width: 100%;
@@ -58,12 +64,6 @@ body {
    #news .new { 
        margin-bottom: 4ex; 
        float: left; 
-   }
-
-   #news a.read_more {  
-     display: block;
-     margin-top: 1.5ex;
-     color: #39b54a;
    }
 
    #news .plugin_picture { 
@@ -93,22 +93,27 @@ body {
    }
 
   #tools {
-    float: right; 
-    width: 260px;
-    border-radius: 20px;
+    margin: 2ex auto 0 auto;
+    width: 248px; 
   }
 
     #special_news { 
-      float: left;
-      margin-bottom: 2ex;
+      margin: 0 auto 2ex auto;
+      background-color: #39b54a;
+      color: white;
+      border-radius: 4px;
+      height: 170px;
+      padding: 4px;
+    }
+
+    #special_news p { 
+      margin: 0 auto 0 auto;
     }
 
     #special_news_text {
       float: left;
-      width: 142px;
-      padding-bottom: 4px;
-      padding-right: 5px;
-      padding-left: 5px;
+      width: 110px;
+      font-size: 80%;
     }
 
     #special_news_image {
