Placeholder for contact

--- a/templates/home.html
+++ b/templates/home.html
@@ -56,6 +56,7 @@
           {% placeholder "picture_gallery" %}
         </div>
         <div id="contact">
+          {% placeholder "contact_link" %}
         </div>
       </div>
     </div>
