--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,9 @@
 
 {% cms_toolbar %}
 <div id="wrapper">
+ <div id="language">	
   {% language_chooser "language_chooser.html" %}
+  </div> 
   {% block base_content %}{% endblock %}
   <div id="footer">
     <img src="{{ STATIC_URL }}img/Life-logo.png"/>
