--- a/static/css/base.css
+++ b/static/css/base.css
@@ -48,7 +48,8 @@ h2 {
       margin: 0;
       padding-left: 5px;
     }
-#disclaimer{
+
+    #disclaimer{
   font-size: 70%;
   margin-top: 5px;
 }
@@ -68,16 +69,18 @@ h2 {
    filter:alpha(opacity=90); /* For IE8 and earlier */
 }
 
-#language_chooser a { 
-   color: #39b54a;
-}
 #footer {
     margin-top: 1ex;
     margin-bottom: 2ex;
-    position: absolute;
     bottom: 0px; width: 100%; 
+    clear: both;
 }
+
 #language {
 	float: right; 
-     width: 718px; 
+  width: 718px; 
+}
+
+#language_chooser a { 
+   color: #39b54a;
 }
