--- a/static/css/home.css
+++ b/static/css/home.css
@@ -7,7 +7,7 @@ body {
 #right { 
      float: right; 
      width: 248px; 
-     background-color: #DBF2F6;
+     /*background-color: #DBF2F6;*/
      padding: 12px;
      padding-top: .5ex;
      -moz-border-radius-bottomright: 4px;
@@ -99,7 +99,7 @@ body {
   }
 
     #special_news { 
-      margin: 0 auto 2ex auto;
+      margin: 0 auto 1ex auto;
       background-color: #39b54a;
       color: white;
       border-radius: 4px;
@@ -143,7 +143,7 @@ body {
       background-color: #39B54A;
       padding: 6px;
       border-radius: 4px;
-      margin-top: 2ex;
+      margin-top: 1ex;
   } 
 
   #contact a {
