--- a/static/css/page.css
+++ b/static/css/page.css
@@ -7,56 +7,16 @@
 	text-align: justify;
 }
 		
-#breacrumbs {
-    font: 13px Helvetica;
-    background-color: #DBF2F6;
-    background-repeat:repeat-x;
-    height:30px;
-    line-height:30px;
-    color:#9b9b9b;
-    border:solid 1px #cacaca;
-    width:100%;
-    overflow:hidden;
-    margin:0px;
-    padding:0px;
-    width:27%;
-}
-
-  #breacrumbs li {
-      list-style-type:none;
-      float:left;
-      padding-left:10px;
-  }
-  
-  #breacrumbs a {
-      height:30px;
-      display:block;
-      background-image:url('../img/bc_separator.png');
-      background-repeat:no-repeat;
-      background-position:right;
-      padding-right: 10px;
-      text-decoration: none;
-      color:#454545;
-  }
-
 #home {
     border: none;
     margin: 8px 0px;
 }
 
 #left { 
-	 float: left; width: 248px; 
-     /*background-color: #DBF2F6;*/
-     padding: 12px;
-     padding-top: .5ex;
-     -moz-border-radius-bottomright: 4px;
-     border-bottom-right-radius: 4px;
-     -moz-border-radius-bottomleft: 4px;
-     border-bottom-left-radius: 4px;
-     -moz-border-radius-topright: 4px;
-     border-top-right-radius: 4px;
-     -moz-border-radius-topleft: 4px;
-     border-top-left-radius: 4px;
+	 float: left;
+   width: 248px; 
+   padding: 12px;
+   padding-top: .5ex;
 }
 
 #right { 
@@ -66,4 +26,8 @@
 
 #page_header {
 	width: 100%; 
+}
+
+#dynamic_menu ul li.selected ul li.descendant {
+  border-bottom: none;
 }
