Fix span problem in home

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -27,6 +27,10 @@ body {
     #project_description p { 
       margin-top: 1ex; 
     }
+
+    #project_description span.plugin_link a { 
+     display: inline;
+    }
   
     #dynamic_menu ul#nav {
       margin: 0;
