--- a/templates/home.html
+++ b/templates/home.html
@@ -57,6 +57,9 @@
         <div id="contact">
           {% placeholder "contact_link" %}
         </div>
+         <div id="facebook">
+          <a href="https://www.facebook.com/Jellyrisk?ref=tn_tnmn" target="new">Follow us on Facebook</a>
+        </div>
       </div>
     </div>
 
